@@ -45,7 +45,7 @@ is coordinated by ontoprise GmbH, Karlsruhe, Germany.
 
 * Code has been contributed by (in no particular order) Kai Hüner, Fernando Correia,
   Yaron Koren, and Nick Grandy, Jörg Heizmann, Daniel Herzig, Nikolas Iwan, Tobias Matzner,
-  Thomas Bleher, Felix Kratzer, Frank Dengler.
+  Thomas Bleher, Felix Kratzer, Frank Dengler, Nathan R. Yergler.
 
 * The new logo and related artwork for Semantic MediaWiki (see semanticweb.org) 
   has been designed and realised by Rozana Vrandecic.
